removed redundant classes to fix the scrollbar in modals

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -28,4 +28,7 @@
 }
 .modal-container::-webkit-scrollbar { 
     display: none;  /* Safari and Chrome */
+    width: 0;
+  color: red;
 }
+
